--- a/src/Styles/aboutme.css
+++ b/src/Styles/aboutme.css
@@ -30,7 +30,7 @@
   font-weight: lighter;
 }
 
-.about-me-text a {
+.download-cv {
   font-family: "Roboto Mono";
   font-size: 0.9rem;
   width: fit-content;
@@ -41,15 +41,28 @@
   cursor: pointer;
   text-decoration: none;
   padding: 0.5rem;
+  transition: 0.5s;
+}
+.download-cv:hover {
+  transform: scale(1.1);
+  transition: 0.5s;
+  color: #dde5db;
+  border: #dde5db solid 0.5px;
 }
 .about-icons {
   padding-top: 2rem;
 }
-.about-icons i {
+.about-icons a {
+  display: inline;
   color: #17b07f;
   margin: 0.5rem;
   cursor: pointer;
   font-size: 1.2rem;
+}
+.icon:hover{
+  transform: scale(1.3);
+  transition: 0.5s;
+  color: #dde5db;
 }
 
 .about-me-main img {
@@ -85,14 +98,14 @@
     font-size: 1.8rem;
   }
 
-  .about-me-main a {
+  .download-cv {
     margin: auto;
   }
 
   .about-icons {
     margin: auto;
   }
-  .about-icons i {
+  .about-icons a {
     font-size: 1.2rem;
   }
 
