--- a/src/Styles/aboutme.css
+++ b/src/Styles/aboutme.css
@@ -37,6 +37,7 @@
   border-radius: 0.5rem;
   border: #17b07f solid 0.5px;
   background: transparent;
+  box-shadow: 2px 2px 4px rgb(0, 0, 0);
   color: #17b07f;
   cursor: pointer;
   text-decoration: none;
@@ -59,7 +60,7 @@
   cursor: pointer;
   font-size: 1.2rem;
 }
-.icon:hover{
+.icon:hover {
   transform: scale(1.3);
   transition: 0.5s;
   color: #dde5db;
@@ -68,6 +69,7 @@
 .about-me-main img {
   border: #17b07f solid 1px;
   border-radius: 2rem;
+  box-shadow: 2px 2px 4px rgb(0, 0, 0);
   width: 200px;
   margin: auto;
   filter: grayscale(100%);
