Implemented nav bar, links and burguer menu in responsive

--- a/src/Styles/aboutme.css
+++ b/src/Styles/aboutme.css
@@ -78,6 +78,7 @@
 .about-me-main img:hover {
   filter: grayscale(0%);
   transition: all 0.8s;
+  transform: scale(1.1);
 }
 
 /*  MEDIA QUERIES */
