Trying to solve issues to deploy

--- a/src/Styles/nav.css
+++ b/src/Styles/nav.css
@@ -4,7 +4,7 @@
   margin: auto;
   height: 50px;
   display: flex;
-  justify-content: end;
+  justify-content: flex-end;
   align-items: center;
 }
 
