--- a/src/Styles/aboutme.css
+++ b/src/Styles/aboutme.css
@@ -2,6 +2,7 @@
   background-color: #1d1d35;
   display: grid;
   grid-template-columns: 60% 10%;
+  height: 100vh;
   width: 90%;
   margin: auto;
 }
@@ -41,6 +42,7 @@
   color: #17b07f;
   cursor: pointer;
   text-decoration: none;
+  text-align: center;
   padding: 0.5rem;
   transition: 0.5s;
 }
