--- a/src/Styles/home.css
+++ b/src/Styles/home.css
@@ -11,25 +11,26 @@
   margin: auto;
   text-align: left;
   display: grid;
-  grid-template-rows: 2% 25% 20% 30%;
+  grid-template-rows: 0% 20% 25% 25%;
   grid-template-columns: 100%;
 }
 
 .home-text h5 {
   color: #17b07f;
   font-family: "Roboto Mono";
+  font-size: 1rem;
   font-weight: 400;
 }
 .home-text h1 {
-  font-family: "Calibri";
   color: #dde5db;
   font-weight: 800;
-  font-size: 3rem;
+  font-size: 5rem;
 }
 .home-text h2 {
-  font-family: "Calibri";
   color: #dde5db;
+  opacity: 0.5;
   font-weight: 900;
+  font-size: 3rem;
 }
 .home-text span {
   color: #9bb0a5;
@@ -52,9 +53,32 @@
   padding: 0.5rem;
   transition: 0.5s;
 }
-.message-me:hover{
-transform: scale(1.1);
+.message-me:hover {
+  transform: scale(1.1);
   transition: 0.5s;
   color: #dde5db;
   border: #dde5db solid 0.5px;
+}
+
+/*  MEDIA QUERIES */
+@media only screen and (max-width: 675px) {
+  .home-main {
+    display: grid;
+    grid-template-columns: 100%;
+    width: 100vw;
+    height: 100vh;
+  }
+  .home-text {
+    width: 90%;
+    text-align: left;
+    display: grid;
+    grid-template-columns: 100%;
+    grid-template-rows: 10% 10% 15%;
+  }
+  .home-text h1 {
+    font-size: 1.8rem;
+  }
+  .home-text h2 {
+    font-size: 1.5rem;
+  }
 }
