--- a/src/Styles/home.css
+++ b/src/Styles/home.css
@@ -66,7 +66,7 @@
     display: grid;
     grid-template-columns: 100%;
     width: 100vw;
-    height: 100vh;
+    height: max-content;
   }
   .home-text {
     width: 90%;
