--- a/src/Styles/home.css
+++ b/src/Styles/home.css
@@ -73,9 +73,9 @@
     text-align: left;
     display: grid;
     grid-template-columns: 100%;
-    grid-template-rows: 5% 8% 25%;
+    grid-template-rows: 10% 15% 30% 55%;
     width: 90vw;
-    height: 90vh;
+    height: max-content;
   }
   .home-text h1 {
     font-size: 2.2rem;
