--- a/src/index.css
+++ b/src/index.css
@@ -17,7 +17,7 @@ hr {
   height: 1px;
   width: 50%;
   border: 0;
-  border-top: 0.5px solid #2f4858;
+  border-top: 0.5px solid #17b07f;
   margin: auto;
   padding: 0;
 }
