--- a/src/Styles/nav.css
+++ b/src/Styles/nav.css
@@ -1,13 +1,14 @@
 .main-nav {
   background-color: #1d1d35;
-  width: 90%;
-  margin: auto;
+  width: 100%;
   height: 50px;
   display: flex;
-  flex-direction: row;
-  justify-content: flex-end;
+  justify-content: center;
   align-items: center;
   scroll-behavior: smooth;
+  padding: 0.5rem 1rem;
+  position: fixed;
+  z-index: 100;
 }
 
 .nav-links a {
@@ -16,9 +17,8 @@
   font-family: "Roboto Mono";
   font-size: 0.8rem;
   margin: 1rem;
-  
 }
-.link{
+.link {
   cursor: pointer;
 }
 
@@ -31,6 +31,12 @@
   display: none;
   font-size: 1.5rem;
   padding: 0.5rem;
+}
+
+/* 01 02 03 04 COLORS */
+.number {
+  color: #17b07f;
+  font-weight: bold;
 }
 
 /* MEDIA QUERY */
