--- a/src/Styles/home.css
+++ b/src/Styles/home.css
@@ -86,6 +86,12 @@
   .home-text span {
     width: 100%;
   }
+.white{
+  background-color: #9bb095;
+}
+.green{
+  background-color: #17b07f;
+}
   .message-me {
     width: 8rem;
   }
