--- a/src/Styles/home.css
+++ b/src/Styles/home.css
@@ -1,5 +1,5 @@
 .home-main {
-  background-color: #1d1d35;
+  background-color: #07051b;
   display: grid;
   grid-template-columns: 100;
   height: 100vh;
