--- a/src/Styles/home.css
+++ b/src/Styles/home.css
@@ -61,12 +61,11 @@
 }
 
 /*  MEDIA QUERIES */
-@media only screen and (max-width: 675px) {
+@media only screen and (max-width: 600px) {
   .home-main {
-    display: grid;
-    grid-template-columns: 100%;
-    width: 100vw;
-    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    width: 100%;
   }
   .home-text {
     text-align: left;
